syntax = "proto3";

package jp.legalontech.cabinet;

message AddUserRequest {
    string mail = 1;
    string password = 2;
    int32 role = 3;
}

message AddUserResponse {
    User data = 1;
    string message = 2;
}

message User {
    int32 id = 1;
    string mail = 2;
    int32 role = 3;
}

service UserService {
    rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
}
